<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/please_input_phoneNo"
        android:textSize="20sp"
        android:textColor="@color/salmon"/>
    
    <EditText 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_phoneNo"
        android:id="@+id/edTxt_phoneNo"/>
    
    <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/please_input_smsContent"
        android:textColor="@color/blue"
        android:textSize="20sp"/>
    
    <EditText 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minLines="4"
        android:hint="@string/input_smsContent"
        android:id="@+id/edTxt_smsContent"/>
    
    <Button 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send_smsContent"
        android:id="@+id/btn_sendSmsContent"/>

</LinearLayout>